samples/_failures_safe/1761175192_150506_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_904d4afa.c: In function ‘create_sample_graph’:
./samples/SAFE/__tmp_904d4afa.c:153:9: error: expected expression at end of input
  153 |         {2, 3, 1}, {3, 4, 1}, {4, 5, 1}, {2,
      |         ^
./samples/SAFE/__tmp_904d4afa.c:153:9: error: expected declaration or statement at end of input
